Updates the following files:
HmpFile.java
HmvFile.java
Mech.java
MechSummaryCache.java
MMRoll.java